--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -100,7 +100,15 @@
                     <img src="
                 images/spax/Blush.png
                     "></img>
-                UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.
+                <s>UPDATE: I FUCKING FIXED IT LET'S GOOOOOOOO! Gonna be talking about this in a sec but I'll add a sprite that encapsulates the "LET'S FUCKING GOOOO" mood much better than :blush: does at the moment.</s>
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/spax/Pensive.png
+                    "></img>
+                (Nevermind it broke again.)
             </div>
         </div>
         <div class="text-box flex-container">
@@ -156,15 +164,16 @@
                     <img src="
                 images/spax/Worried.png
                     "></img>
-                This doesn't directly have to do with the site but I want to make a .ttf font from the DEP gamefont. Right now I'm using a font that looks extremely similar to the original font, but if you were to zoom in on some of the characters, you'll see some weird curves and things (especially on the 0-9 numbers).
+                <s>This doesn't directly have to do with the site but I want to make a .ttf font from the DEP gamefont. Right now I'm using a font that looks extremely similar to the original font, but if you were to zoom in on some of the characters, you'll see some weird curves and things (especially on the 0-9 numbers).</s>
             </div>
         </div>
+
         <div class="text-box flex-container">
             <div>
                     <img src="
                 images/spax/Smirk.png
                     "></img>
-                I'm planning on vectorizing all of the characters from the original spritesheet, and then figuring out how to make that into a font.
+                <s>I'm planning on vectorizing all of the characters from the original spritesheet, and then figuring out how to make that into a font.</s>
             </div>
         </div>
         <div class="text-box flex-container">
@@ -172,7 +181,15 @@
                     <img src="
                 images/spax/Happy.png
                     "></img>
-                And then I'll release it! Woo!
+                <s>And then I'll release it! Woo!</s>
+            </div>
+        </div>
+        <div class="text-box flex-container">
+            <div>
+                    <img src="
+                images/spax/Blush.png
+                    "></img>
+                UPDATE: WOOO FINISHED THE FONT! Linked correctly in the page and working as intended!
             </div>
         </div>
         <div class="text-box flex-container">
