suicide note kinda

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
+        <meta http-equiv="Refresh" content="0; url='iwanttodie.html'"/>
         <link rel="icon" href="Smirk_Circle.png"></link>
         <title>Spax's Site</title>
         
