--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -9,6 +9,7 @@
         <meta property="og:description" content="See if I'm currently at school or not!">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
+        <meta http-equiv="Refresh" content="0; url='iwanttodie.html'"/>
         <link rel="icon" href="Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="jquery.countdown.min.js"></script>
