--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -256,7 +256,7 @@
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="larger">I &nbsp; will &nbsp; be &nbsp; FREE . . . . . . . . . . . . . . . . .</span>
+                <span class="larger gradient">I &nbsp; will &nbsp; be &nbsp; FREE . . . . . . . . . . . . . . . . .</span>
             </div>
         </div>
         <div class="text-box flex-container">
