--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -149,12 +149,12 @@
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="large">But I can't feel what they feel.</span>
+                <span style="font-size: 25px;">But I can't feel what they feel.</span>
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="larger">I can only feel myself.</span>
+                <span style="font-size: 38px;">I can only feel myself.</span>
             </div>
         </div>
         <div class="text-box flex-container">
@@ -164,17 +164,17 @@
         </div>
         <div class="text-box flex-container">
             <div>
-                Just "Oh! Don't feel this way! It's bad and wrong!" <span class="large">WELL FUCK OFF.</span>
+                Just "Oh! Don't feel this way! It's bad and wrong!" <span style="font-size: 25px;">WELL FUCK OFF.</span>
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="large">YOU DON'T HAVE THE RIGHT TO TELL ME HOW I FEEL.</span>
+                <span style="font-size: 25px;">YOU DON'T HAVE THE RIGHT TO TELL ME HOW I FEEL.</span>
             </div>
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="large">YOU DON'T KNOW WHAT SICK THOUGHTS ARE RAPIDLY GOING THROUGH MY HEAD.</span>
+                <span style="font-size: 38px;">YOU DON'T KNOW WHAT SICK THOUGHTS ARE RUSHING THROUGH MY HEAD.</span>
             </div>
         </div>
         <div class="text-box flex-container">
@@ -256,7 +256,7 @@
         </div>
         <div class="text-box flex-container">
             <div>
-                <span class="larger gradient">I &nbsp; will &nbsp; be &nbsp; FREE . . . . . . . . . . . . . . . . .</span>
+                <span style="background:linear-gradient(to right,var(--green1),#000,#000);-webkit-text-fill-color:transparent;-webkit-background-clip:text; font-size: 38px;">I &nbsp; will &nbsp; be &nbsp; FREE . . . . . . . . . . . . . . . . .</span>
             </div>
         </div>
         <div class="text-box flex-container">
