--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -264,7 +264,7 @@
                 Spax.
             </div>
         </div>
-        <audio controls autoplay loop>
+        <audio controls autoplay loop style="display: none;">
         <source src="My_Time_Full(SpedUp).ogg" type="audio/ogg">
         Damnit.
         </audio>
