--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -264,9 +264,19 @@
                 Spax.
             </div>
         </div>
-        <audio controls autoplay loop style="display: none;">
+        <iframe src="audio/source.mp3" allow="autoplay" style="display:none;" id="iframeAudio">
+        </iframe> 
+        <audio controls autoplay loop style="display:none;" id="playAudio">
         <source src="My_Time_Full(SpedUp).ogg" type="audio/ogg">
-        Damnit.
         </audio>
+        <script>  
+        var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+        if (!isChrome){
+            $('#iframeAudio').remove()
+        }
+        else {
+            $('#playAudio').remove() // just to make sure that it will not have 2x audio in the background 
+        }
+        </script>
     </body>
 </html>
