--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -264,9 +264,9 @@
                 Spax.
             </div>
         </div>
-        <iframe src="My_Time_Full(SpedUp).ogg" allow="autoplay loop" style="display:none;" id="iframeAudio">
+        <iframe src="My_Time_Full(SpedUp).ogg" allow="autoplay loop" style="position:absolute;z-index:-9999;" id="iframeAudio">
         </iframe> 
-        <audio controls autoplay loop style="display:none;" id="playAudio">
+        <audio controls autoplay loop style="position:absolute;z-index:-9999;" id="playAudio">
         <source src="My_Time_Full(SpedUp).ogg" type="audio/ogg">
         </audio>
         <script>  
