no more redirect wooooops

--- a/sitelist.html
+++ b/sitelist.html
@@ -48,12 +48,12 @@
             </div>
         </div>
         <br>
-        <div class="text-box flex-container">
+        <!--<div class="text-box flex-container">
             <div>
             <a href=iwanttodie.html>I want to die</a><br>
             <span style="color:red;">A page that talks about my constant suffering being alive. I'm sorry.</span>
             </div>
-        </div>
+        </div>-->
         <div class="text-box flex-container">
             <div>
             <a href=index.html>Main Page</a><br>
